feat: Add build timestamp collision protection to recommendations service
- Query JFrog Build API for exact timestamp after build info publishing
- Pass precise timestamp to application creation for collision resolution
- Maintains backward compatibility with optional timestamp field
- Adds extra layer of build identification protection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       build_number: ${{ steps.set-build-info.outputs.build_number }}
       app_version: ${{ steps.set-app-version.outputs.app_version }}
       coverage_percent: ${{ steps.test-coverage.outputs.coverage_percent }}
+      build_started_timestamp: ${{ env.BUILD_STARTED_TIMESTAMP }}
 
     steps:
       - name: "[Setup] Checkout"
@@ -721,7 +722,24 @@ jobs:
         run: |
           jf rt bag --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
           jf rt bce --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
-          jf rt bp --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
+          if BUILD_PUBLISH_RESULT=$(jf rt bp --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"); then
+            echo "BUILD_INFO_PUBLISH_STATUS=SUCCESS" >> $GITHUB_ENV
+            
+            # Query build info API to get exact timestamp for collision protection
+            BUILD_INFO_RESPONSE=$(curl -s -H "Authorization: Bearer $JF_ACCESS_TOKEN" \
+              "$JF_URL/artifactory/api/build/$BUILD_NAME/$BUILD_NUMBER?project=${{ vars.PROJECT_KEY }}" || echo "")
+            
+            if [[ -n "$BUILD_INFO_RESPONSE" ]]; then
+              BUILD_STARTED_TIMESTAMP=$(echo "$BUILD_INFO_RESPONSE" | jq -r '.buildInfo.started // empty' 2>/dev/null || echo "")
+              if [[ -n "$BUILD_STARTED_TIMESTAMP" && "$BUILD_STARTED_TIMESTAMP" != "null" && "$BUILD_STARTED_TIMESTAMP" != "empty" ]]; then
+                echo "BUILD_STARTED_TIMESTAMP=$BUILD_STARTED_TIMESTAMP" >> $GITHUB_ENV
+                echo "✅ Using exact build timestamp: $BUILD_STARTED_TIMESTAMP"
+              fi
+            fi
+          else
+            echo "BUILD_INFO_PUBLISH_STATUS=FAILED" >> $GITHUB_ENV
+            exit 1
+          fi
 
       - name: "[Evidence] Attach quality gate"
         env:
@@ -852,6 +870,8 @@ jobs:
           # Pull version information from previous job outputs
           APP_VERSION="${{ needs.build-test-publish.outputs.app_version }}"
           IMAGE_TAG="$APP_VERSION"
+          # Get build timestamp for collision protection
+          BUILD_STARTED_TIMESTAMP="${{ needs.build-test-publish.outputs.build_started_timestamp }}"
 
           echo "SERVICE_NAME=$SERVICE_NAME" >> $GITHUB_ENV
           echo "APPLICATION_KEY=$APPLICATION_KEY" >> $GITHUB_ENV
@@ -859,6 +879,7 @@ jobs:
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "BUILD_NAME=$BUILD_NAME" >> $GITHUB_ENV
           echo "BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
+          echo "BUILD_STARTED_TIMESTAMP=$BUILD_STARTED_TIMESTAMP" >> $GITHUB_ENV
           echo "✅ AppTrust variables set: $APPLICATION_KEY@$APP_VERSION (build $SERVICE_NAME#$IMAGE_TAG)"
 
       - name: "[Auth] Persist JF access token (OIDC → JFrog)"
@@ -910,15 +931,12 @@ jobs:
           APP_TAG="${TAG_OPTIONS[$TAG_INDEX]}"
           echo "🏷️ Application Version Tag (demo simulation): $APP_TAG"
 
-          # Create application version with build sources
-          APP_VERSION_PAYLOAD=$(cat << EOF
-          {
-            "version": "$APP_VERSION",
-            "tag": "$APP_TAG",
-            "sources": {"builds": [{"name": "$BUILD_NAME", "number": "$BUILD_NUMBER", "repository_key": "${{ vars.PROJECT_KEY }}-build-info", "include_dependencies": true}]}
-          }
-          EOF
-          )
+          # Create application version with build sources (with optional timestamp for collision protection)
+          if [[ -n "$BUILD_STARTED_TIMESTAMP" && "$BUILD_STARTED_TIMESTAMP" != "null" ]]; then
+            APP_VERSION_PAYLOAD='{"version":"'$APP_VERSION'","tag":"'$APP_TAG'","sources":{"builds":[{"name":"'$BUILD_NAME'","number":"'$BUILD_NUMBER'","repository_key":"'${{ vars.PROJECT_KEY }}'-build-info","include_dependencies":true,"started":"'$BUILD_STARTED_TIMESTAMP'"}]}}'
+          else
+            APP_VERSION_PAYLOAD='{"version":"'$APP_VERSION'","tag":"'$APP_TAG'","sources":{"builds":[{"name":"'$BUILD_NAME'","number":"'$BUILD_NUMBER'","repository_key":"'${{ vars.PROJECT_KEY }}'-build-info","include_dependencies":true}]}}'
+          fi
 
           # Debug: show request context and payload (only tokens are redacted)
           echo "📦 Application Key: $APPLICATION_KEY"
