--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -550,8 +550,8 @@ jobs:
       - name: "[Evidence] Attach coverage (images)"
         run: |
           echo "📊 Attaching coverage evidence"
-          jf evd create-evidence --predicate coverage-evidence.json --markdown coverage-evidence.md --predicate-type "https://pytest.org/evidence/results/v1" --package-name "$API_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$API_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Coverage evidence attachment failed for $API_PACKAGE_NAME"
-          jf evd create-evidence --predicate coverage-evidence.json --markdown coverage-evidence.md --predicate-type "https://pytest.org/evidence/results/v1" --package-name "$WORKER_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$WORKER_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Coverage evidence attachment failed for $WORKER_PACKAGE_NAME"
+          jf evd create-evidence --predicate coverage-evidence.json --markdown coverage-evidence.md --predicate-type "https://pytest.org/evidence/results/v1" --package-name "$API_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$API_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ Coverage evidence attachment failed for $API_PACKAGE_NAME"
+          jf evd create-evidence --predicate coverage-evidence.json --markdown coverage-evidence.md --predicate-type "https://pytest.org/evidence/results/v1" --package-name "$WORKER_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$WORKER_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ Coverage evidence attachment failed for $WORKER_PACKAGE_NAME"
           echo "✅ Coverage evidence attached to both images"
 
       - name: "[Evidence] Create SAST artifacts"
@@ -579,8 +579,8 @@ jobs:
       - name: "[Evidence] Attach SAST (images)"
         run: |
           echo "🔍 Attaching SAST evidence"
-          jf evd create-evidence --predicate sast-evidence.json --markdown sast-summary.md --predicate-type "https://checkmarx.com/evidence/sast/v1.1" --package-name "$API_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$API_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ SAST evidence attachment failed for $API_PACKAGE_NAME"
-          jf evd create-evidence --predicate sast-evidence.json --markdown sast-summary.md --predicate-type "https://checkmarx.com/evidence/sast/v1.1" --package-name "$WORKER_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$WORKER_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ SAST evidence attachment failed for $WORKER_PACKAGE_NAME"
+          jf evd create-evidence --predicate sast-evidence.json --markdown sast-summary.md --predicate-type "https://checkmarx.com/evidence/sast/v1.1" --package-name "$API_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$API_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ SAST evidence attachment failed for $API_PACKAGE_NAME"
+          jf evd create-evidence --predicate sast-evidence.json --markdown sast-summary.md --predicate-type "https://checkmarx.com/evidence/sast/v1.1" --package-name "$WORKER_PACKAGE_NAME" --package-repo-name "$DOCKER_REPO" --package-version "$WORKER_IMAGE_TAG" --project "${{ vars.PROJECT_KEY }}" --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ SAST evidence attachment failed for $WORKER_PACKAGE_NAME"
           echo "✅ SAST evidence attached to both images"
 
       - name: "[Artifacts] Package config/resources"
@@ -662,7 +662,8 @@ jobs:
             --package-repo-name "$GENERIC_REPO" \
             --package-version "${CONFIG_VERSION_TAG:-$IMAGE_TAG}" \
             --project "${{ vars.PROJECT_KEY }}" \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Generic evidence attachment failed (config)"
+            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
+            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ Generic evidence attachment failed (config)"
 
       - name: "[Evidence] Attach (resources bundle)"
         run: |
@@ -675,7 +676,8 @@ jobs:
             --package-repo-name "$GENERIC_REPO" \
             --package-version "${RESOURCES_VERSION_TAG:-$IMAGE_TAG}" \
             --project "${{ vars.PROJECT_KEY }}" \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Generic evidence attachment failed (resources)"
+            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
+            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ Generic evidence attachment failed (resources)"
 
       - name: "[Summary] CI"
         run: |
@@ -777,7 +779,8 @@ jobs:
             --build-name "$BUILD_NAME" \
             --build-number "$BUILD_NUMBER" \
             --project "${{ vars.PROJECT_KEY }}" \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ Quality gate evidence attachment failed"
+            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
+            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ Quality gate evidence attachment failed"
 
       # Evidence Plan: Build subject – license-compliance (FOSSA)
       - name: "[Evidence] Prepare license template"
@@ -1144,7 +1147,8 @@ jobs:
             --release-bundle "$APPLICATION_KEY" \
             --release-bundle-version "$APP_VERSION" \
             --project "${{ vars.PROJECT_KEY }}" \
-            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" || echo "⚠️ SDLC evidence attachment failed"
+            --key "${{ secrets.EVIDENCE_PRIVATE_KEY }}" \
+            --key-alias "${{ vars.EVIDENCE_KEY_ALIAS }}" || echo "⚠️ SDLC evidence attachment failed"
           echo "✅ SDLC evidence attached"
 
       - name: "[Summary] AppTrust"
