fix: replace jf curl with direct HTTP requests in rollback script
- Update rollback script to use direct HTTP requests with token auth
- Add fallback to JFrog CLI for backwards compatibility
- Add dedicated rollback API endpoint support
- Update rollback workflow to use --use-api flag

--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -85,7 +85,8 @@ jobs:
         run: |
           python scripts/apptrust_rollback.py \
             --app "bookverse-recommendations" \
-            --version "${{ github.event.inputs.version }}"
+            --version "${{ github.event.inputs.version }}" \
+            --use-api
 
       - name: "[Tags] Enforce PROD 'latest' invariants"
         run: |
