fix: use separate build-docker-create calls for each image like the older working version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -595,7 +595,8 @@ jobs:
       - name: "[Build Info] Publish"
         run: |
           # Associate the pushed Docker images with the build-info before publishing
-          echo "🔗 Adding docker images to build-info: API=$API_IMAGE_NAME Worker=$WORKER_IMAGE_NAME repo=$DOCKER_REPO"
+          REPO_KEY="${{ vars.PROJECT_KEY }}-$SERVICE_NAME-internal-docker-nonprod-local"
+          echo "🔗 Adding docker images to build-info: API=$API_IMAGE_NAME Worker=$WORKER_IMAGE_NAME repo=$REPO_KEY"
           
           # Resolve API image digest and write in required format: image:tag@sha256:...
           API_DIGEST=$(docker inspect "$API_IMAGE_NAME" --format='{{index .RepoDigests 0}}' 2>/dev/null | awk -F@ '{print $2}')
@@ -617,12 +618,18 @@ jobs:
             echo "❌ Could not resolve Worker image digest for $WORKER_IMAGE_NAME" >&2; exit 1
           fi
           
-          # Create images file with both images
-          echo "${API_IMAGE_NAME%@*}@${API_DIGEST}" > images.txt
-          echo "${WORKER_IMAGE_NAME%@*}@${WORKER_DIGEST}" >> images.txt
+          # Associate API image with build info (separate call like older working version)
+          echo "${API_IMAGE_NAME%@*}@${API_DIGEST}" > api_image.txt
+          jf rt build-docker-create "$REPO_KEY" \
+            --image-file api_image.txt \
+            --build-name "$BUILD_NAME" \
+            --build-number "$BUILD_NUMBER" \
+            --project "${{ vars.PROJECT_KEY }}"
           
-          jf rt build-docker-create "$DOCKER_REPO" \
-            --image-file images.txt \
+          # Associate Worker image with build info (separate call like older working version)
+          echo "${WORKER_IMAGE_NAME%@*}@${WORKER_DIGEST}" > worker_image.txt
+          jf rt build-docker-create "$REPO_KEY" \
+            --image-file worker_image.txt \
             --build-name "$BUILD_NAME" \
             --build-number "$BUILD_NUMBER" \
             --project "${{ vars.PROJECT_KEY }}"
