--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1067,8 +1067,7 @@ jobs:
 
   create-application-version:
     needs: [analyze-commit, build-test-publish]
-    # Temporarily removed condition for debugging
-    # if: needs.analyze-commit.outputs.create_app_version == 'true' && needs.build-test-publish.result == 'success'
+    if: needs.analyze-commit.outputs.create_app_version == 'true' && needs.build-test-publish.result == 'success'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -1078,13 +1077,6 @@ jobs:
       id-token: write
 
     steps:
-      - name: "[Debug] Job Condition Values"
-        run: |
-          echo "🔍 DEBUG: Job condition values:"
-          echo "  needs.analyze-commit.outputs.create_app_version: '${{ needs.analyze-commit.outputs.create_app_version }}'"
-          echo "  needs.build-test-publish.result: '${{ needs.build-test-publish.result }}'"
-          echo "  Condition should be: create_app_version == 'true' && result == 'success'"
-          
       - name: "[Setup] Checkout"
         uses: actions/checkout@v4
 
@@ -1233,14 +1225,6 @@ jobs:
             exit 1
           fi
           echo "✅ Application version created and validated (COMPLETED): $APPLICATION_KEY@$APP_VERSION"
-
-      - name: "[Demo] Skip Application Version"
-        if: ${{ needs.analyze-commit.outputs.create_app_version == 'false' }}
-        run: |
-          echo "⏭️ Skipping application version creation"
-          echo "📋 Reason: ${{ needs.analyze-commit.outputs.decision_reason }}"
-          echo "🔨 Build info created for traceability, but no promotion pipeline triggered"
-          echo "🏭 Production note: This would be the default behavior in real systems"
 
       # Evidence Plan: App UNASSIGNED – slsa-provenance and jira-tickets (gate to DEV)
       - name: "[Evidence] Prepare UNASSIGNED templates"
