fix: resolve CI dependency issue for bookverse-core
- Copy bookverse-core library into libs/ directory
- Update requirements.txt to use relative path (./libs/bookverse-core)
- Enables CI environment to access bookverse-core without local filesystem

This resolves the CI failure:
ERROR: Could not install packages due to an OSError: [Errno 2] No such file or directory: '/Users/yonatanp/playground/AppTrust-BookVerse/bookverse-demo/bookverse-core'

Migration testing can now proceed in CI environment.

--- a/libs/bookverse-core/requirements.txt
+++ b/libs/bookverse-core/requirements.txt
@@ -1,11 +1,8 @@
 fastapi==0.111.0
 uvicorn[standard]==0.30.0
-httpx==0.27.0
-python-dotenv==1.0.1
-pytest==8.3.2
+pydantic==2.5.0
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.9
 requests==2.31.0
-
-
-bookverse-core @ file:./libs/bookverse-core
+PyYAML==6.0.1
+sqlalchemy==2.0.23
