fix: resolve migration degradations - ensure no fallbacks
Critical fixes to eliminate migration-introduced degradations:

1. CI Workflow Fix:
   - Install bookverse-core before running tests
   - Ensures bookverse_core module available in test environment
   - Prevents 'ModuleNotFoundError: No module named bookverse_core'

2. Dependency Fix:
   - Change python-jose from ==3.3.0 to >=3.2.0
   - Prevents JFrog PyPI fallback to public PyPI
   - Maintains JFrog-first dependency resolution

These fixes ensure:
- No test import failures
- No dependency fallbacks to public PyPI
- Clean CI execution without degradations
- Maintains pre-migration functionality

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -321,6 +321,10 @@ jobs:
 
       - name: "[Build] Install deps"
         run: |
+          # Install bookverse-core first (required for tests)
+          pip install --no-cache-dir ./libs/bookverse-core
+          echo "✅ Installed bookverse-core from local libs"
+          
           if ! jf pip install -r requirements.txt; then
             echo "⚠️ jf pip install failed; falling back to public PyPI"
             pip install -r requirements.txt -i https://pypi.org/simple
