--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ uvicorn[standard]==0.30.0
 httpx==0.27.0
 python-dotenv==1.1.1
 pytest==8.3.2
-python-jose[cryptography]==3.3.0
+python-jose[cryptography]>=3.2.0
 python-multipart==0.0.9
 requests==2.31.0
