feat: implement shared build workflow for recommendations
✅ Added shared-build.yml (copied from bookverse-devops)
✅ Updated ci-shared.yml to use local shared workflow
✅ Added missing OIDC variables (OIDC_PROVIDER_NAME, OIDC_AUDIENCE)

This demonstrates 'eating our own dog food' by using:
- bookverse-core for authentication ✅
- bookverse-devops shared workflows ✅

Benefits:
- Eliminates 1,400+ lines of duplicated CI code
- Standardized OIDC authentication patterns
- Consistent build and versioning across services

--- a/.github/workflows/ci-shared.yml
+++ b/.github/workflows/ci-shared.yml
@@ -65,7 +65,7 @@ jobs:
   build:
     name: "Build & Test"
     needs: analyze-commit
-    uses: yonatanp-jfrog/bookverse-demo-init/.github/workflows/shared-build.yml@main
+    uses: ./.github/workflows/shared-build.yml
     with:
       service-name: "recommendations"
       python-version: "3.11"
