fix: use correct JFrog CLI setup action with required workaround
CRITICAL: Changed from jfrog/setup-jfrog-cli@v4 to EyalDelarea/setup-jfrog-cli@swampUpAppTrust

This is the specific version with required workarounds for the BookVerse demo environment.
Using the wrong version causes OIDC authentication failures.

--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -68,7 +68,7 @@ jobs:
       
       - name: "🔧 JFrog CLI Setup with OIDC (Pattern 1)"
         id: jfrog-cli-setup
-        uses: jfrog/setup-jfrog-cli@v3
+        uses: EyalDelarea/setup-jfrog-cli@swampUpAppTrust
         env:
           JF_URL: ${{ vars.JFROG_URL }}
         with:
