fix: install local bookverse-core library in shared workflow
CRITICAL FIX:
✅ Added installation of local bookverse-core library before tests
✅ Uses 'pip install -e ./libs/bookverse-core' for editable install
✅ Only installs if libs/bookverse-core directory exists
✅ Fixes ModuleNotFoundError during test phase

The issue was that tests were failing because bookverse_core module
was not available during the test phase, even though the service
code was successfully migrated to use it.

--- a/.github/workflows/shared-build.yml
+++ b/.github/workflows/shared-build.yml
@@ -233,6 +233,13 @@ jobs:
           # Configure JFrog PyPI resolution
           jf pip-config --repo-resolve="${{ vars.PROJECT_KEY }}-pypi-virtual"
           
+          # Install local bookverse-core library if it exists (for services using it)
+          if [ -d "libs/bookverse-core" ]; then
+            echo "Installing local bookverse-core library..."
+            pip install -e ./libs/bookverse-core
+            echo "✅ Local bookverse-core installed"
+          fi
+          
           # Install dependencies from JFrog (with fallback to PyPI)
           if [ -f "requirements.txt" ]; then
             echo "Installing from requirements.txt..."
