fix: disable legacy CI workflow to prevent duplicate runs
WORKFLOW CLEANUP:
✅ Disabled original ci.yml workflow (1,446 lines)
✅ Prevents duplicate workflow runs on push/PR
✅ Migration complete: now using ci-shared.yml exclusively
✅ Commented out triggers but kept workflow for reference

BEFORE: 3 workflows triggered per commit
- ci.yml (push trigger)
- ci-shared.yml (push trigger)
- ci-shared.yml (manual trigger)

AFTER: 1 workflow per commit (ci-shared.yml only)

The legacy workflow can be re-enabled by uncommenting the 'on:' section.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,18 @@
-name: CI
+name: CI (Legacy - DISABLED)
 
-# DEMO-READY: Automatic triggers enabled for full CI/CD pipeline demonstration
-# PRODUCTION NOTE: Real systems would have additional branch protection and approval gates
-'on':
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  workflow_dispatch:
+# MIGRATION COMPLETE: This workflow has been replaced by ci-shared.yml
+# Disabled to prevent duplicate workflow runs during migration
+# 
+# ORIGINAL: 1,446 lines of custom CI logic
+# NEW: Uses shared workflows from bookverse-devops for consistency
+#
+# To re-enable: uncomment the 'on:' section below
+# 'on':
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
+#   workflow_dispatch:
     inputs:
       reason:
         description: 'Reason for manual CI trigger'
